--- a/style.css
+++ b/style.css
@@ -8,15 +8,8 @@
 
 body{
   font-family: "Inter", sans-serif;
-  color: #fff;
 }
 
-:root {
-  --bg: #ffffff;
-  --text: #333;
-  --toggle-bg: #ccc;
-  --slider-pos: 2px;
-}
 
 a{
   text-decoration: none;
@@ -24,7 +17,7 @@ a{
 }
 
 .section{
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 3rem;
 }
@@ -104,45 +97,11 @@ li{
 }
 
 .icons{
-  padding: .9rem;
+  gap: 10px;
   font-size: 1.3rem;
   transition: color 0.3s ease;
 }
 
-.toggle__bar{
-  display: flex;
-  justify-content: right;
-  align-items: center;
-  gap: .5rem;
-
-}
-
-.toggle-container {
-  position: relative;
-  width: 60px;
-  height: 30px;
-  background-color: var(--toggle-bg);
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 5px;
-  transition: background-color 0.3s ease;
-}
-
-.toggle-slider {
-  position: absolute;
-  top: 2px;
-  left: var(--slider-pos);
-  width: 26px;
-  height: 26px;
-  background-color: white;
-  border-radius: 50%;
-  transition: left 0.3s cubic-bezier(0.4, 0, 0.2, 1); /* Smooth sliding effect */
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
 
 .user__ads{
   display: flex;
@@ -178,6 +137,7 @@ li{
 .hero__content h1{
   font-size: 60px;
   font-weight: 500;
+  color: #fff;
 }
 
 .hero__content p{
@@ -207,7 +167,122 @@ li{
 }
 
 
+/* About Page styling */
 
-@media (max-width: 1000px){
- 
+.about{
+  background-color: #e4e4de;
+}
+
+.about-info{
+  font-size: 10px;
+  font-weight: light;
+  color: #555;
+}
+
+.about-info::after {
+  content: "Discover Trails";
+  display: block;
+  margin-top: 6px;
+  padding-bottom: 4px;
+  font-size: 26px;
+  font-weight: bold;
+  color: #000;
+}
+
+.line {
+  width: 60px;
+  border: none;
+  height: 2px;
+  background-color: black;
+  margin: 15px 0;
+}
+
+.about-info_btns{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about-info_btns p{
+  color: #555;
+}
+
+.btn{
+  padding: .6rem .7rem;
+  margin-left: .5rem;
+  border: none;
+  border-radius: 5px;
+  color: #52ad8f;
+}
+
+.imgs__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  /* gap: 10px 10px; */
+  justify-items: stretch;
+  align-items: stretch;
+  justify-content: space-evenly;
+  grid-auto-columns: auto;
+  grid-auto-rows: auto;
+  grid-auto-flow: row;
+  margin-top: 2rem;
+}
+
+.img__container {
+  max-width: 350px;
+  border: 2px solid green;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.img-box {
+  position: relative;
+}
+
+.img-box img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.tour-remark {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  padding: 0.6rem 1.2rem;
+  background-color: gray;
+  color: greenyellow;
+  border-radius: 10px;
+  font-size: 0.9rem;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 830px){
+ .section{
+  padding: 2rem;
+ }
+}
+
+
+@media screen and (max-width: 600px){
+ .section{
+  padding: 1rem;
+ }
+
+ nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+ }
 }
